# spirob_actuation

PlatformIO/Projects/Spirob_aktuation/: .gitignore  COMMUNICATION_PROTOCOL.md  MAIN_FIRMWARE_ARCHITECTURE.md  MJMODEL.TXT  README.md  analyze_step_response.py  live_monitor_anu78025_8.py  live_monitor_simple.py  main.py  platformio.ini  pyproject.toml  spiral_chain.xml  spirob_digital_twin.py  step_response_automation.py  system_identification.py
PlatformIO/Projects/Spirob_aktuation/.github/: copilot-instructions.md
PlatformIO/Projects/Spirob_aktuation/src/: ConfigManager.cpp  ConfigManager.h  DistanceSensorVL6180X.cpp  DistanceSensorVL6180X.h  EndStopSwitch.cpp  EndStopSwitch.h  FIRMWARE_README.md  ForceControlLoop.cpp  ForceControlLoop.h  ForceSensor.h  ForceSensorAnu78025.cpp  ForceSensorAnu78025.h  ForceSensorHX711.cpp  ForceSensorHX711.h  MotorController.cpp  MotorController.h  MotorDriver.cpp  MotorDriver.h  PidController.cpp  PidController.h  SENSOR_ABSTRACTION.md  SafetyManager.cpp  SafetyManager.h  main.cpp  main_SystemIdentification.cpp  main_object_force.cpp  test_anu78025.cpp  test_config.cpp  test_hx711.cpp  test_motor.cpp  test_one_motor_force_control.cpp  test_vl6180x.cpp
